set(EXAMPLE_GENERATE_VTK_SRC "generate_vtk.cpp")
add_executable(generate_vtk ${EXAMPLE_GENERATE_VTK_SRC})

set(EXAMPLE_AUTO_EXTENT_MANAGEMENT "auto_extent_management.cpp")
add_executable(auto_extent_management ${EXAMPLE_AUTO_EXTENT_MANAGEMENT})

set(EXAMPLE_AMR_DATA_SET_GENERATE "amr_hierarchical_box_data_set.cpp")
add_executable(amr_hierarchical_box_data_set ${EXAMPLE_AMR_DATA_SET_GENERATE})